<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".LoginPage"
    android:background="@drawable/login_bg_img">

    <androidx.cardview.widget.CardView


        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="100dp"
        android:background="@color/whiteGrey"
        android:padding="20dp"
        app:cardElevation="30dp"
        app:cardCornerRadius="30dp">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"

                android:text="@string/SignUp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="22dp"
                android:autofillHints=""
                android:background="@drawable/custom_input"

                android:drawablePadding="12dp"

                android:ems="10"
                android:hint="@string/FirstName"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="14sp" />
            <EditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="22dp"
                android:autofillHints=""
                android:background="@drawable/custom_input"

                android:drawablePadding="12dp"

                android:ems="10"
                android:hint="@string/LastName"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="14sp" />
            <EditText
                android:id="@+id/department"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="22dp"
                android:autofillHints=""
                android:background="@drawable/custom_input"

                android:drawablePadding="12dp"

                android:ems="10"
                android:hint="@string/Department"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/textPasswordRegister"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="22dp"
                android:autofillHints=""
                android:background="@drawable/custom_input"

                android:drawablePadding="12dp"

                android:ems="10"
                android:hint="@string/Password"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="14sp"
                tools:ignore="TextFields" />
            <EditText
                android:id="@+id/conformPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="22dp"
                android:autofillHints=""
                android:background="@drawable/custom_input"

                android:drawablePadding="12dp"

                android:ems="10"
                android:hint="@string/ConformPassword"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="14sp"
                tools:ignore="TextFields" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:padding="12dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_button"

                android:gravity="center"
                android:text="@string/RegisterBtn"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"


                />







            <TextView
                android:id="@+id/HaveAccount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:text="@string/AlreadyHaveAccount"
                android:gravity="center_horizontal"
                android:textColor="@color/purple_500"
                android:textStyle="bold"/>

        </LinearLayout>


    </androidx.cardview.widget.CardView>




</LinearLayout>